# aiida-zeopp

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE.txt  README.md  azure-pipelines.yml  conftest.py  manage.py  pyproject.toml  pytest.ini  run_tests.py  setup.json  setup.py
.cache/v/cache/: lastfailed
.ci/: check_tag.sh  check_version.py  install_aiida_github.sh  network
.ci/azure-templates/: apt-steps.yml  conda-steps.yml
.github/: check_version.py
.github/workflows/: build.yml  ci.yml  publish-on-pypi.yml
.travis-data/: check_version.py  install_aiida_github.sh  network  script.sh
aiida_zeopp/: __init__.py
aiida_zeopp/calculations/: __init__.py  network.py  test_network.py
aiida_zeopp/data/: parameters.py  test_parameters.py
aiida_zeopp/parsers/: network.py  plain.py  structure.py  test_network.py  test_parsers.py  test_plain.py  test_structure.py
aiida_zeopp/tests/: HKUST-1.cif  HKUST-1.cssr  HKUST-1.sa  HKUST-1.volpo  MgO.cif  P8bal_P1.chan  __init__.py  test_helpers.py
aiida_zeopp/workflows/: __init__.py  blockpockets.py  geometry.py
examples/: cli.py  example_01.py  example_02.py  example_03.py  submit.py
examples/workflows/: run_zeopp_workflow.py  structure.cif
